# sluug_stllug_site

./: .editorconfig  .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  shell.nix  tailwind.config.mjs  tsconfig.json
.devcontainer/: devcontainer.json
ai_gen/: .gitignore  eslint.config.js  package-lock.json  package.json  tsconfig.json
ai_gen/sample_data/: 2021-01-13_sluug.json
ai_gen/src/: addAiContent.ts  models.ts
python/: .gitignore  pyproject.toml
python/src/generate/: __init__.py
site/: .gitignore  astro.config.mjs  package-lock.json  tsconfig.json
site/src/: buildTimeUtils.ts  models.ts
site/src/components/: MeetingPresenter.astro  Tags.astro
site/src/content/: config.ts
site/src/pages/: about.astro  (+1 more)
src/: buildTimeUtils.ts  constants.ts  models.ts
src/components/: ConnectionBanner.astro  Footer.astro  Header.astro  MeetingCardHorizontal.astro  MeetingCardVertical.astro  MeetingListing.astro  MeetingMaterials.astro  MeetingMaterials.css  MeetingPresenter.astro  MeetingTitle.astro  Navigation.astro  Pagination.astro  PresenterWrapper.astro  ResponsiveYouTubeEmbed.astro  SluugAgenda.astro  SluugCalendar.astro  SluugListing.astro  Social.astro  StllugAgenda.astro  Tags.astro  ThemeIcon.astro
src/content/: config.ts
src/layouts/: BaseLayout.astro  MarkdownPostLayout.astro  MeetingLayout.astro  MeetingYamlLayout.astro  PresenterLayout.astro
src/pages/: about.astro  blog.astro  index.astro  resources.astro  rss.xml.js  sluug.astro  sluug2.astro  stllug.astro
src/scripts/: menu.ts
src/styles/: base.css  global.css
(+246 files in other folders)
