[project]
name = "generate"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sean Twie03", email = "sean.twie03@mail.com" }
]
dependencies = [
    "langchain>=0.1.16",
    "langchain_community>=0.0.34",
    "openai>=1.23.6",
    "langchain_openai>=0.1.3",
    "pyyaml>=6.0.1",
]
readme = "../README.md"
requires-python = ">= 3.8"

[project.scripts]
generate = 'generate:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/generate"]
